# extractor_req

./: .gitignore  README.md  config.example.yaml  pyproject.toml
extractor_req/: __init__.py  cli.py  config.py  consolidator.py  scanner.py
extractor_req/analysis/: __init__.py  analyzer.py  branding_detector.py  scope_spec.py
extractor_req/extractors/: __init__.py  audio.py  docx.py  email.py  github_repo.py  image.py  pdf.py  pptx.py  spreadsheet.py  video.py  web.py
extractor_req/output/: __init__.py  writer.py
extractor_req/scope/: __init__.py  branding_prompt.py  docx_builder.py  drawing.py  mockup_generator.py  schema.py
prompts/: requirements_analysis.md
